REGRESSION(r232316) [Win] error C2039: 'event': is not a member of 'WebCore::NavigationAction' https://bugs.webkit.org/show_bug.cgi?id=186125

Unreviewed build fix

* WebActionPropertyBag.cpp:
(WebActionPropertyBag::Read):
(findMouseEvent): Deleted.

Canonical link: https://commits.webkit.org/201553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232336 268f45cc-cd09-0410-ab3c-d52691b4dbfc